[gd_scene load_steps=3 format=3 uid="uid://c4y7h2m5n6k8w"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1"]
[ext_resource type="Theme" path="res://assets/themes/main_theme.tres" id="2"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.05, 0.1, 1)

[node name="TitleContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 50.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2

[node name="Title" type="Label" parent="TitleContainer"]
layout_mode = 2
theme = ExtResource("2")
theme_override_font_sizes/font_size = 48
text = "RAM OVERCLOCKING SIMULATOR"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Learn Real Memory Overclocking!"
horizontal_alignment = 1

[node name="MenuContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="NewGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Start New Game"

[node name="LoadGameButton" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Load Game"

[node name="KnowledgeBaseButton" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Knowledge Base"

[node name="SettingsButton" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="ExitButton" type="Button" parent="MenuContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Exit"

[connection signal="pressed" from="MenuContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MenuContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="MenuContainer/KnowledgeBaseButton" to="." method="_on_knowledge_base_button_pressed"]
[connection signal="pressed" from="MenuContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MenuContainer/ExitButton" to="." method="_on_exit_button_pressed"]